--- a/legacy/index-v7.html
+++ b/legacy/index-v7.html
@@ -68,7 +68,7 @@
     <section class="intro overflow-x--hidden bg-primary">
         <div class="container">
             <div class="intro-wrapper">
-                <div class="intro-background-wave-wrapper disable-desktop">
+                <div class="intro-background-wave-wrapper">
                     <svg class="intro-background-wave" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                         xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1125 548"
                         style="enable-background:new 0 0 1125 548;" xml:space="preserve">
@@ -88,7 +88,7 @@
                             fill="url(#intro-background-wave-pattern)" />
                     </svg>
                 </div>
-                <img class="intro-mountain disable-desktop" src="images/masthead/mountain.png" alt="">
+                <img class="intro-mountain" src="images/masthead/mountain.png" alt="">
                 <img data-aos="fade-right" class="intro-smile-circ2"
                     src="images/intro/sign-circular-smile-2-modified-clr.png" alt="">
                 <div data-aos="fade-left" class="intro-text">
