--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
         href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=Montserrat&family=Sacramento&display=swap"
         rel="stylesheet">
 
-    <script defer src="js/scroll-timeline_3063e156535f3ab1ffc8a4000ffdd3290232c121_dist/scroll-timeline.js"></script>
+    <!-- <script defer src="js/scroll-timeline_3063e156535f3ab1ffc8a4000ffdd3290232c121_dist/scroll-timeline.js"></script> -->
     <script defer src="js/script.js" type="module"></script>
 </head>
 
 <body>
+    <!-- <nav data-aos="fade-down" class="nav"> -->
     <nav class="nav">
         <div class="container nav-content-wrapper flex-layout">
             <div class="nav-icon-wrapper">
@@ -48,10 +49,9 @@
             </div>
         </div>
     </nav>
-    <header class="top">
+    <header class="top overflow-x--hidden overflow-y--hidden">
         <div class="container">
             <div class="top-wrapper">
-
                 <div class="split">
                     <img class="top-orange-planet" src="images/masthead/cl3d-orange-planet-with-disk.png" alt="">
                     <img class="top-blue-planet" src="images/masthead/cl3d-blue-planet-with-moon.png" alt="">
